[package]
name = "calabi"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
futures = "0.3.28"
lazy_static = "1.4.0"
reqwest = { version = "0.11.19", features = ["json"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
