[package]
name = "calabi"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = "0.4.26"
futures = "0.3.28"
lazy_static = "1.4.0"
reqwest = { version = "0.11.19", default-features = false, features = [
	"json",
	"rustls-tls",
] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
