[package]
name = "calabi"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "calabi"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.26"
futures = "0.3.28"
lazy_static = "1.4.0"
regex = { version = "1.9.4", default-features = false, features = ["unicode"] }
reqwest = { version = "0.11.19", default-features = false, features = [
	"json",
	"rustls-tls",
] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
	"ansi",
	"env-filter",
	"fmt",
	"json",
	"std",
] }
